<?xml version="1.0" encoding="utf-8"?><!-- Logo designed by Naveen -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/loginProgressDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="1dp"
        android:visibility="invisible"
        tools:ignore="UnusedAttribute">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp">

        <ImageView
            android:id="@+id/imgAppLoginIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="30dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgAppLoginIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_border_for_view_lightblue"
            android:drawableStart="@drawable/ic_baseline_phone_android_24"
            android:drawablePadding="4dp"
            android:hint="@string/mobile_number_10_digits"
            android:inputType="number"
            android:maxLength="10"
            android:padding="10dp"
            android:textSize="18sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etMobileNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_border_for_view_lightblue"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="4dp"
            android:hint="@string/Password"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:padding="10dp"
            android:textSize="18sp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_border_for_view_darkblue"
            android:elevation="1dp"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/btnSigninasGuest"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_border_for_view_green"
            android:elevation="1dp"
            android:text="@string/view_all_workshops"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSigninasGuest"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/don_t_have_an_account_sign_up_now"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>