<?xml version="1.0" encoding="utf-8"?><!-- Logo designed by Naveen -->

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.RegisterFragment">

    <RelativeLayout
        android:id="@+id/registerProgressdialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="1dp"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/register_yourself"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_border_for_view_lightblue"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="4dp"
                android:hint="@string/name_min_3_characters"
                android:inputType="text"
                android:maxLength="20"
                android:padding="10dp"
                android:textSize="18sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_border_for_view_lightblue"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="4dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:padding="10dp"
                android:textSize="18sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_border_for_view_lightblue"
                android:drawableStart="@drawable/ic_baseline_phone_android_24"
                android:drawablePadding="4dp"
                android:hint="@string/mobile_number_10_digits"
                android:inputType="number"
                android:maxLength="10"
                android:padding="10dp"
                android:textSize="18sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etDeliveryAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_border_for_view_lightblue"
                android:drawableStart="@drawable/ic_baseline_location_on_24"
                android:drawablePadding="4dp"
                android:hint="@string/delivery_address"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="18sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_border_for_view_lightblue"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="4dp"
                android:hint="@string/password_min_4_digits"
                android:inputType="numberPassword"
                android:maxLength="8"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="18sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_border_for_view_lightblue"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="4dp"
                android:hint="@string/confirm_password"
                android:inputType="numberPassword"
                android:maxLength="8"
                android:padding="10dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_border_for_view_darkblue"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="20sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="Press back to go to Login screen"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>