<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.ForgotPasswordInputFragment">

    <RelativeLayout
        android:id="@+id/forgotPasswordInputProgressDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="1dp"
        android:visibility="invisible"
        tools:ignore="UnusedAttribute">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/imgAppIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txtForgotPasswordLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAppIcon"
            android:layout_centerHorizontal="true"
            android:padding="2dp"
            android:text="@string/enter_the_following_details"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtForgotPasswordLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtForgotPasswordLine1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/otp_will_be_send_to_the_registered_email"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtForgotPasswordLine2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_border_for_view_lightblue"
            android:drawableStart="@drawable/ic_baseline_phone_android_24"
            android:drawablePadding="8dp"
            android:hint="@string/mobile_number_10_digits"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etMobileNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_border_for_view_lightblue"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="8dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_border_for_view_darkblue"
            android:text="@string/next"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="normal" />

    </RelativeLayout>

</RelativeLayout>