<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.ForgotPasswordFragment">

    <RelativeLayout
        android:id="@+id/forgotPasswordProgressDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="1dp"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp">

        <ImageView
            android:id="@+id/imgForgotLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgForgotLogo"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/enter_the_otp_received_below"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etOTP"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtForgotPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_border_for_view_lightblue"
                android:drawableStart="@drawable/ic_baseline_phone_android_24"
                android:drawablePadding="4dp"
                android:hint="@string/otp_4_characters"
                android:inputType="number|text"
                android:maxLength="4"
                android:maxLines="1"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etOTP"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_border_for_view_lightblue"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="4dp"
                android:hint="@string/new_password_min_4_digits"
                android:inputType="number|numberPassword"
                android:maxLength="8"
                android:maxLines="1"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etConfirmForgotPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etNewPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_border_for_view_lightblue"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="4dp"
                android:hint="@string/confirm_password"
                android:inputType="number|numberPassword"
                android:maxLength="8"
                android:maxLines="1"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/etConfirmForgotPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_border_for_view_darkblue"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textSize="18sp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>